# MPI_Phoenix

./: README.md
mpi_back/: machine.txt  setup.sh
mpi_back/mpich-3.0.2/: mpich.sln
mpi_back/mpich-3.0.2/examples/: machine  run.sh
mpi_back/mpich-3.0.2/maint/: mpichi.vdproj
mpi_back/mpich3-arm/: configure.ac  makewindist.bat
mpi_back/mpich3-arm/examples/: Makefile.am  mytest  mytest.c
mpi_back/mpich3-arm/install/etc/: mpicc.conf  mpicxx.conf
mpi_back/mpich3-arm/install/include/: mpi.h  mpicxx.h  opa_config.h
mpi_back/mpich3-arm/maint/: mpichx64i.vdproj  version.m4
mpi_back/my_work_backup_linear/my_work_wordcount/my_work/: Makefile  Makefile.in  config.status
mpi_back/my_work_backup_linear/my_work_wordcount/my_work/misc/www/: Makefile  Makefile.am  Makefile.in  common.js  ctime.txt  imgtune.htm  p_pelcod.htm  renable.htm  test_cgi.c
mpi_back/my_work_backup_linear/my_work_wordcount/my_work/misc/www/cgi-bin/: update.cgi
mpi_back/my_work_backup_linear/my_work_wordcount_arm/my_work/: Makefile  config.status  configure
mpi_back/my_work_backup_linear/my_work_wordcount_arm/my_work/misc/: Makefile  Makefile.am  boa.conf  www_03_23.tgz
mpi_back/my_work_backup_linear/my_work_wordcount_arm/my_work/misc/libusb-0.1.10/: INSTALL.libusb  darwin.c  libtool  usb.c
mpi_back/my_work_backup_linear/my_work_wordcount_arm/my_work/misc/libusb-0.1.10/doc/: Makefile
mpi_back/my_work_backup_linear/my_work_wordcount_arm/my_work/misc/mod/: Makefile  Makefile.in  edmak.ko
mpi_back/my_work_backup_linear/my_work_wordcount_arm/my_work/misc/ppp-2.4.1/pppd/: pathnames.h  pppd.8
mpi_back/my_work_backup_linear/my_work_wordcount_arm/my_work/misc/ppp-2.4.1/pppdump/: pppdump
mpi_back/my_work_backup_linear/my_work_wordcount_arm/my_work/misc/test/: ip-init.sh
mpi_back/my_work_backup_linear/my_work_wordcount_arm/my_work/misc/usbutils-0.91/: config.h.in
mpi_back/my_work_backup_linear/my_work_wordcount_arm/my_work/misc/www/: .Makefile.am.swp  Makefile  aenable.htm  nsntp.htm  rsch.htm  test_cgi.cgi
mpi_back/my_work_backup_linear/my_work_wordcount_arm/my_work/misc/www_back/: aevt.htm  index.htm  lang_cn_us.jsl  lang_en_us.jsl  setcard.htm
mpi_back/my_work_backup_stringmatch/my_work_wordcount/my_work/: Makefile  config.h  config.status  configure  reconf  tags
mpi_back/my_work_backup_stringmatch/my_work_wordcount_arm/my_work/: Makefile  Makefile.in  config.status
mpi_back/my_work_backup_stringmatch/my_work_wordcount_arm/my_work/test/: Makefile  Makefile.am  Makefile.in  bmp_header.h  intraNode.cpp  see  test_memory  test_system_debug  upload.sh
mpi_back/my_work_backup_stringmatch/my_work_wordcount_arm/my_work/test/.deps/: call_dsp.Po  intraNode.Po  test_memory.Po  test_system_debug.Po  test_wordcount.Po
mpi_back/phoenix++-1.0/: tags
mpi_back/phoenix++-1.0/include/: atomic.h
my_work_backup_wordcount/my_work_wordcount/my_work/: Makefile  Makefile.am  config.h.in~
my_work_backup_wordcount/my_work_wordcount/my_work/src/: Makefile  Makefile.am  master_control.cpp
my_work_backup_wordcount/my_work_wordcount/my_work/src/.deps/: mapreduce.Po  scheduler.Po  task_queue.Po
my_work_backup_wordcount/my_work_wordcount/my_work/src/worknode/core/: .map_reduce.h.swp  container.h
my_work_backup_wordcount/my_work_wordcount_arm/my_work/: AUTHORS  config.h.in  config.status  configure.ac  configure.scan  see
my_work_backup_wordcount/my_work_wordcount_arm/my_work/dir/: Makefile.in
my_work_backup_wordcount/my_work_wordcount_arm/my_work/include/: mapreduce.h
my_work_backup_wordcount/my_work_wordcount_arm/my_work/include/worknode/: work_mapreduce.h
my_work_backup_wordcount/my_work_wordcount_arm/my_work/lib/.deps/: libcpuinfo.Po  libunix.Po
my_work_backup_wordcount/my_work_wordcount_arm/my_work/misc/libusb-0.1.10/: configure.in  libusb-config
my_work_backup_wordcount/my_work_wordcount_arm/my_work/misc/mod/: Makefile  Makefile.am  cmemk.ko
my_work_backup_wordcount/my_work_wordcount_arm/my_work/misc/www/: Makefile  c_update.htm  imgcoder.htm  index_hello.htm  multicast.htm  setsmtp.htm  srs.htm  storage.htm
my_work_backup_wordcount/my_work_wordcount_arm/my_work/misc/www_back/: imgtune.htm  nsmtp.htm  storage.htm
my_work_backup_wordcount/my_work_wordcount_arm/my_work/src/: Makefile  Makefile.am
my_work_backup_wordcount/my_work_wordcount_arm/my_work/src/.deps/: filetask_manager.Po  mapreduce.Po  memory.Po  task_queue.Po  work_mapreduce.Po
my_work_backup_wordcount/my_work_wordcount_arm/my_work/src/utils/: disk_util.h
my_work_backup_wordcount/my_work_wordcount_arm/my_work/src/worknode/: work_mapreduce.cpp
my_work_backup_wordcount/my_work_wordcount_arm/my_work/src/worknode/core/: locality.h  task_queue.cpp
my_work_backup_wordcount/my_work_wordcount_arm/my_work/test/: Makefile  Makefile.am  duibi.c  files.txt  intraNode.cpp  run.sh  see  test_system_debug  test_wordcount
my_work_backup_wordcount/my_work_wordcount_arm/my_work/test/.deps/: test_wordcount.Po
(+706 files in other folders)
