wwwdir = $(prefix)/www/
www_DATA=test_cgi.cgi update.cgi serial.htm imgcoder.htm image.htm imgtune.htm aenable.htm aevt.htm c_nupnp.htm c_update.htm datetime.htm ess.htm img.htm index.htm logout.htm main.htm motion.htm multicast.htm net.htm p_pelcod.htm ptz.htm renable.htm rsch.htm saudio.htm sdigital.htm sdt.htm srs.htm storage.htm sts.htm suser.htm update.htm version.htm lc_en_us.csl tvdevicedesc.xml.file bell2_small_gray.gif new_log.gif newbrand2.gif ie_01.jpg nobrand.jpg white_head.jpg common.js menu.js override.js ptzctrl.js setInnerHTML.js var.js lang_cn_us.jsl lang_en_us.jsl lang_zh_tw.jsl ctime.txt nsntp.htm 
